<resources>
    <string name="app_name">Timetable</string>
    <string name="classes">Classes</string>
    <string name="_6_classes_today">6 classes today</string>
    <string name="homework">Homework</string>
    <string name="are_you_ready_for_exams">Are you ready for exams?</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="search">Search</string>
    <string name="filters">Filter</string>
    <string name="me">Me</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="_8_00_8_45">8:00 - 8:45</string>
    <string name="math">Math</string>
    <string name="open_in">Open in</string>
    <string name="_2_days_left">2 days left</string>
    <string name="literature">Literature</string>
    <string name="description_of_the_home_task">Description of the home task</string>
</resources>