<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search_app_bar"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:title="@string/search"
        android:orderInCategory="1"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item android:id="@+id/list_app_bar"
        android:icon="@drawable/ic_list"
        app:showAsAction="always"
        android:title="@string/filters"
        android:orderInCategory="2"/>
    <item android:id="@+id/quad_app_bar"
        android:icon="@drawable/ic_quad"
        app:showAsAction="always"
        android:title="@string/me"
        android:orderInCategory="3"/>
</menu>