<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search_app_bar"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:title="@string/search"
        android:orderInCategory="1"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <!--        app:actionLayout="@layout/search_view_layout"-->
    <item android:id="@+id/filter_app_bar"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always"
        android:title="@string/filters"
        android:orderInCategory="2"/>
    <item android:id="@+id/me_app_bar"
        android:icon="@drawable/ic_me"
        app:showAsAction="always"
        android:title="@string/me"
        android:orderInCategory="3"/>
</menu>