<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#272727"
    app:cardCornerRadius="32dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon"
            android:src="@drawable/math"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintBottom_toTopOf="@id/time"
            app:layout_constraintTop_toTopOf="@id/icon"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8_00_8_45"
            android:textColor="#696969"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toBottomOf="@id/icon"/>

        <Button
            android:id="@+id/open_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:backgroundTint="#5999ff"
            android:text="@string/open_in"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>