<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1C"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:theme="@style/MyThemeOverlay_Toolbar"
        app:title="Hi, Mike!"
        app:menu="@menu/app_bar_menu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="38dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/classes_label"
        app:layout_constraintVertical_weight="8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#64DFB8">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_ready_for_exams"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/hours_00_container"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/days_00_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#64DFB8"
                android:layout_margin="4dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintTop_toTopOf="@id/hours_00_container"
                app:layout_constraintBottom_toBottomOf="@id/hours_00_container"
                app:layout_constraintEnd_toStartOf="@id/days_0_container">

                <TextView
                    android:id="@+id/days_00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:background="#30000000"
                    android:text="0"
                    android:textSize="26sp"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/days_0_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#64DFB8"
                android:layout_margin="4dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintTop_toTopOf="@id/hours_00_container"
                app:layout_constraintBottom_toBottomOf="@id/hours_00_container"
                app:layout_constraintEnd_toStartOf="@id/double_1">

                <TextView
                    android:id="@+id/days_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:background="#30000000"
                    android:text="9"
                    android:textSize="26sp"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/double_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_margin="4dp"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/hours_00_container"
                app:layout_constraintBottom_toBottomOf="@id/hours_00_container"
                app:layout_constraintEnd_toStartOf="@id/hours_00_container"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/hours_00_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#64DFB8"
                android:layout_margin="2dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintTop_toBottomOf="@id/card_title"
                app:layout_constraintStart_toEndOf="@id/card_title"
                app:layout_constraintEnd_toStartOf="@id/hours_0_container"
                app:layout_constraintBottom_toTopOf="@id/hours_label">

                <TextView
                    android:id="@+id/hours_00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:background="#30000000"
                    android:text="2"
                    android:textSize="26sp"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/hours_0_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#64DFB8"
                android:layout_margin="2dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintTop_toBottomOf="@id/card_title"
                app:layout_constraintStart_toEndOf="@id/hours_00_container"
                app:layout_constraintEnd_toStartOf="@id/card_title"
                app:layout_constraintBottom_toTopOf="@id/hours_label">

                <TextView
                    android:id="@+id/hours_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:background="#30000000"
                    android:text="3"
                    android:textSize="26sp"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/double_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text=":"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/hours_0_container"
                app:layout_constraintBottom_toBottomOf="@id/hours_0_container"
                app:layout_constraintStart_toEndOf="@id/hours_0_container"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/minutes_00_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#64DFB8"
                android:layout_margin="4dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintTop_toTopOf="@id/hours_0_container"
                app:layout_constraintBottom_toBottomOf="@id/hours_0_container"
                app:layout_constraintStart_toEndOf="@id/double_2">

                <TextView
                    android:id="@+id/minutes_00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:background="#30000000"
                    android:text="5"
                    android:textSize="26sp"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/minutes_0_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#64DFB8"
                android:layout_margin="4dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintTop_toTopOf="@id/hours_0_container"
                app:layout_constraintBottom_toBottomOf="@id/hours_0_container"
                app:layout_constraintStart_toEndOf="@id/minutes_00_container">

                <TextView
                    android:id="@+id/minutes_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:background="#30000000"
                    android:text="9"
                    android:textSize="26sp"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/days_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                app:layout_constraintTop_toBottomOf="@id/days_0_container"
                app:layout_constraintStart_toStartOf="@id/days_0_container"
                app:layout_constraintEnd_toEndOf="@id/days_00_container"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/hours_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                app:layout_constraintTop_toBottomOf="@id/hours_0_container"
                app:layout_constraintStart_toStartOf="@id/hours_0_container"
                app:layout_constraintEnd_toEndOf="@id/hours_00_container"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/minutes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                app:layout_constraintTop_toBottomOf="@id/minutes_0_container"
                app:layout_constraintStart_toStartOf="@id/minutes_0_container"
                app:layout_constraintEnd_toEndOf="@id/minutes_00_container"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/classes_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/timer"
        app:layout_constraintBottom_toTopOf="@id/classes_recycler">

        <TextView
            android:id="@+id/classes_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classes"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/classes_label_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6_classes_today"
            android:textColor="#C9C9C9"
            android:gravity="end"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/classes_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/classes_label"
        app:layout_constraintBottom_toTopOf="@id/homework_label"
        app:layout_constraintVertical_weight="5"/>

    <LinearLayout
        android:id="@+id/homework_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/classes_recycler"
        app:layout_constraintBottom_toTopOf="@id/homework_recycler">

        <TextView
            android:id="@+id/homework_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homework"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homework_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/homework_label"
        app:layout_constraintBottom_toTopOf="@id/nav_bar_card"
        app:layout_constraintVertical_weight="9"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/nav_bar_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_bar"
            style="@style/navBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/nav_bar_menu"/>
    </androidx.cardview.widget.CardView>


    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>